# cs316-json-parser

./: CS316Coursework2023.cabal  LICENSE  README.md  SPECIFICATION.md  additional-test-cases.md
app/: Main.hs
data/: hills.json
src/: JSON.hs  JSONInput.hs  JSONOutput.hs  JSONTransformer.hs  ParserCombinators.hs  QueryLanguage.hs  Result.hs
test/: Spec.hs
